--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@prisma/client": "^5.18.0",
     "graphql": "^16.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
+    "prisma": "^5.18.0",
     "typescript": "^5.5.4"
   }
 }
